# demo_traductor

./: README.md  pyproject.toml
tests/: test_traductor.py
traductor/: __main__.py
traductor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
