[tool.poetry]
name = "traductor"
version = "0.0.1"
description = "Traductor CLI de palabras"
authors = ["Santiago Quiñones <lsquinones@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lsantiago/demo_traductor"
repository = "https://github.com/lsantiago/demo_traductor"
keywords = ["traductor", "translate"]

[tool.poetry.scripts]
traductor = 'traductor.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
translate = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
twine = "^3.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
